[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "thucloud-toolkit"
version = "0.1.0"
description = "Reliable Tsinghua Cloud operations for large files and URL datasets"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31",
  "tqdm>=4.66",
]

[project.scripts]
thucloud = "thucloud.cli:main"

[tool.setuptools.packages.find]
include = ["thucloud*"]
